Changed connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=(localhost)\\SQLEXPRESS;Database=Inventory;Trusted_Connection=True;"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Inventory;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Database=Inventory;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
   }
 }
